# rs-cli

./: AGENTS.md  Cargo.toml  README.md  deny.toml
docs/: rust_modules_best_practices.md
fixtures/: blake3.txt  ed25519.pk  ed25519.sk
src/: cli.rs  lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  jwt.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  jwt.rs  mod.rs  text.rs
