[package]
name = "rs-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Edo <3zangelks@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
blake3 = "1.8.2"
clap = { version = "4.5.43", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "3.0.0-pre.0", features = ["rand_core"] }
hex = "0.4"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
toml = "0.9.5"
zxcvbn = "3.1.0"

[dev-dependencies]
tempfile = "3.10.1"

[profile.release]
strip = true
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = "z"

[[bin]]
name = "rst"
path = "src/main.rs"
